Vector cleanup in OL3 examples

--- a/thesis/examples/openlayers3/4.5.3/index.html
+++ b/thesis/examples/openlayers3/4.5.3/index.html
@@ -149,7 +149,8 @@
         <!-- /#wrapper -->
         <script type="text/javascript" >
             var lyr = new ol.layer.Vector({
-                source: new ol.source.GeoJSON({
+                source: new ol.source.Vector({
+                    format: new ol.format.GeoJSON(),
                     url: '../../../res/vector/countries_trunk.geojson'
                 })
             });
