--- a/thesis/examples/mapboxjs/comcont.html
+++ b/thesis/examples/mapboxjs/comcont.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Gabor Farkas" >
 
-    <title>4.6. Map controls (Mapbox JS)</title>
+    <title>4.7. Composing controls (Mapbox JS)</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
@@ -56,24 +56,21 @@
                         <a href="featman.html">4.5. Feature management</a>
                     </li>
                     <li>
-                        4.6. Map controls
-                        <ul>
-                            <li>
-                                <a href="4.6.1/index.html">Projection</a>
-                            </li>
-                            <li>
-                                <a href="4.6.2/index.html">View</a>
-                            </li>
-                            <li>
-                                <a href="4.6.3/index.html">Interactions</a>
-                            </li>
-                            <li>
-                                <a href="4.6.4/index.html">Miscellaneous</a>
-                            </li>
-                        </ul>
+                        <a href="mapcont.html">4.6. Map controls</a>
                     </li>
                     <li>
-                        <a href="comcont.html">4.7. Composing controls</a>
+                        4.7. Composing controls
+                        <ul>
+                            <li>
+                                <a href="4.7.1/index.html">Vector styles</a>
+                            </li>
+                            <li>
+                                <a href="4.7.2/index.html">Thematic layers</a>
+                            </li>
+                            <li>
+                                <a href="4.7.3/index.html">Cartographic elements</a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="broken/index.html">Broken functions</a>
@@ -95,7 +92,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Mapbox JS Map controls examples</h1>
+                        <h1>Mapbox JS Composing controls examples</h1>
                         <p>This page contains all of the examples from the study related to Mapbox JS. Feel free to use the sidebar to browse this section, and implement any of the code snippets if they are satisfactory for your needs.</p>
                     </div>
                 </div>
