--- a/thesis/index.html
+++ b/thesis/index.html
@@ -60,6 +60,8 @@
                     <div class="col-lg-12">
                         <h1>Thesis examples</h1>
                         <p>This page contains all of the examples for the study "Comparison of Web Mapping Libraries for Building WebGIS Clients".</p>
+                        <p>It is advised to use a web server for benchmarking, as Benchmark.js's access to the browser's high resolution clock is not guaranteed when opened from the file system.</p>
+                        <p>When accessing from the filesystem with Google Chrome, CORS should be enabled. CORS can be enabled by starting Chrome with the <code>--allow-file-access-from-files</code> flag. Note that this method causes a potential security risk. To avoid this, take care not to load any other <code>.html</code> files other than the ones included in this appendix in the same browsing session.</p>
                     </div>
                 </div>
             </div>
