--- a/thesis/examples/openlayers3/comcont.html
+++ b/thesis/examples/openlayers3/comcont.html
@@ -9,14 +9,14 @@
     <meta name="description" content="">
     <meta name="author" content="Gabor Farkas" >
 
-    <title>4.6. Map controls (Mapbox JS)</title>
+    <title>4.6. Composing controls (OpenLayers 3)</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../css/mapstyle.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="../../css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/mapstyle.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,10 +41,7 @@
                     <a href="../openlayers2/index.html">OpenLayers 2</a>
                 </li>
                 <li>
-                    <a href="../openlayers3/index.html">OpenLayers 3</a>
-                </li>
-                <li>
-                    <a href="index.html">Mapbox JS</a>
+                    <a href="index.html">OpenLayers 3</a>
                     <ul>
                     <li>
                         <a href="dataio.html">4.3. Data I/O</a>
@@ -56,29 +53,29 @@
                         <a href="featman.html">4.5. Feature management</a>
                     </li>
                     <li>
-                        4.6. Map controls
-                        <ul>
-                            <li>
-                                <a href="4.6.1/index.html">Projection</a>
-                            </li>
-                            <li>
-                                <a href="4.6.2/index.html">View</a>
-                            </li>
-                            <li>
-                                <a href="4.6.3/index.html">Interactions</a>
-                            </li>
-                            <li>
-                                <a href="4.6.4/index.html">Miscellaneous</a>
-                            </li>
-                        </ul>
+                        <a href="mapcont.html">4.6. Map controls</a>
                     </li>
                     <li>
-                        <a href="comcont.html">4.7. Composing controls</a>
+                        4.7. Composing controls
+                        <ul>
+                            <li>
+                                <a href="4.7.1/index.html">Vector styles</a>
+                            </li>
+                            <li>
+                                <a href="4.7.2/index.html">Thematic layers</a>
+                            </li>
+                            <li>
+                                <a href="4.7.3/index.html">Cartographic elements</a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="broken/index.html">Broken functions</a>
                     </li>
                     </ul>
+                </li>
+                <li>
+                    <a href="../mapboxjs/index.html">Mapbox JS</a>
                 </li>
                 <li>
                     <a href="../../licenses.html">Legal terms</a>
@@ -95,8 +92,8 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Mapbox JS Map controls examples</h1>
-                        <p>This page contains all of the examples from the study related to Mapbox JS. Feel free to use the sidebar to browse this section, and implement any of the code snippets if they are satisfactory for your needs.</p>
+                        <h1>OpenLayers 3 Composing controls examples</h1>
+                        <p>This page contains all of the examples from the study related to OpenLayers 3. Feel free to use the sidebar to browse this section, and implement any of the code snippets if they are satisfactory for your needs.</p>
                     </div>
                 </div>
             </div>
