--- a/thesis/contact.html
+++ b/thesis/contact.html
@@ -47,7 +47,7 @@
                     <a href="licenses.html">Legal terms</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    Contact
                 </li>
             </ul>
         </div>
@@ -58,8 +58,25 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Thesis examples</h1>
-                        <p>This page contains all of the examples for the study "Comparison of Web Mapping Libraries for Building WebGIS Clients".</p>
+                        <h1>Contact</h1>
+                        <br>
+                        <p>Gábor Farkas</p>
+                        <p>
+                            Master of Sciences
+                            <br><br>
+                            University of Pécs
+                            <br>
+                            Faculty of Sciences
+                            <br>
+                            Institute of Geography
+                        </p>
+                        <p>
+                            E-mail:
+                            <br> 
+                            <a href="mailto:raandal73@gmail.com">raandal73@gmail.com</a>
+                            <br>
+                            <a href="mailto:randal73@gamma.ttk.pte.hu">randal73@gamma.ttk.pte.hu</a>
+                        </p>
                     </div>
                 </div>
             </div>
