--- a/thesis/examples/openlayers3/broken/index.html
+++ b/thesis/examples/openlayers3/broken/index.html
@@ -30,7 +30,7 @@
     <script type="text/javascript" src="../../../js/benchmark.js"></script>
     <script type="text/javascript" src="wfs_4326.js"></script>
     <script type="text/javascript" src="osmxml.js"></script>
-    <script type="text/javascript" src="osm.js"></script>
+    <script type="text/javascript" src="overview.js"></script>
 
 </head>
 
@@ -104,10 +104,10 @@
                                 <a href="osmxml.js">osmxml.js</a>
                             </span>
                             <br>
-                            <p>OSM online</p>
-                            <button onclick="load(osm)">Load</button>
+                            <p>Overview map</p>
+                            <button onclick="load(overview)">Load</button>
                             <span>Source: 
-                                <a href="osm.js">osm.js</a>
+                                <a href="overview.js">overview.js</a>
                             </span>
                             <br><br>
                             <div id="benchmarkOutput" class="benchmarkOutput"></div>
