Add design license

--- a/thesis/licenses.html
+++ b/thesis/licenses.html
@@ -123,6 +123,8 @@
                         <h2>Other tile resources:</h2>
                         <p>Geography Class: &copy; Mapbox.</p>
                         <p>MapQuest: &copy; MapQuest, OpenStreetMap contributors</p>
+                        <h2>Design:</h2>
+                        <p>Bootstrap - Simple Sidebar: &copy; 2004 David Miller. <a href="bootstrap.md">See license.</a></p>
                     </div>
                 </div>
             </div>
