Close tags properly

--- a/practical_gis/index.html
+++ b/practical_gis/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <ul>
-            <li><a href="ch03/geonames_desc.csv">Supplementary GeoNames table for Chapter 3</a><li>
-            <li><a href="ch07/createcurves.sql">SQL function for creating curves from polylines</a><li>
+            <li><a href="ch03/geonames_desc.csv">Supplementary GeoNames table for Chapter 3</a></li>
+            <li><a href="ch07/createcurves.sql">SQL function for creating curves from polylines</a></li>
         </ul>
     </body>
 </html>
