--- a/papers/index.html
+++ b/papers/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Welcome to my ugly papers page!</h1>
-        <a href="comparison_clients.pdf">Applicability of open-source web mapping libraries for building massive Web GIS clients</a>
+        <a href="comparison_clients.pdf">Farkas, G. (2017). Applicability of open-source web mapping libraries for building massive Web GIS clients. Journal of Geographical Systems.</a>
     </body>
 </html>
