--- a/rendering_pub/bench/index.html
+++ b/rendering_pub/bench/index.html
@@ -59,7 +59,7 @@
         Async: <input type="checkbox" name="async" checked></input>
         </form>
         <p>NOTES:</p>
-        Created exclusively to support the paper "A WebGL Powered Vector Rendering Engine for OpenLayers 3". There won't be further changes, nor more detailed description.<br>
+        Created exclusively to support the paper "Hardware Accelerating 2D Web Maps: A Case Study". There won't be further changes, nor more detailed description.<br>
         The tests cannot be stopped without reloading the page.<br>
         If you change the settings during a test, you will almost <b>definitely</b> end up with corrupted results (in case you get any results).<br>
         The output is always in milliseconds. The result should be interpreted as a CSV file with the pipe symbol (|) as field separator.<br>
