--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </div>
 
 
-<p>I received my BSc and MSc degrees in geography in University of Pécs, Institute of Geography. I’m currently a lecturer with the same institute. My tasks involve teaching, operating two computer labs, and researching. My main reseach interests are Web GIS and GIS development on an open source basis. In parallel, I’m also working towards my PhD degree in Earth Sciences.</p>
+<p>I received my BSc and MSc degrees in geography in the University of Pécs, Institute of Geography. I’m currently a lecturer with the same institute. My tasks involve teaching, operating two computer labs, and researching. My main reseach interests are Web GIS and GIS development on an open source basis. In parallel, I’m also working towards my PhD degree in Earth Sciences.</p>
 
 
 
@@ -104,7 +104,7 @@
   
     <div class="social">
   <span class="contacticon center">
-    <a href="mailto:randal73@gamma.ttk.pte.hu"><i class="fa fa-envelope-square"></i></a>
+    <a href="mailto:gfarkas@gamma.ttk.pte.hu"><i class="fa fa-envelope-square"></i></a>
     <a href="https://github.com/GaborFarkas" target="_blank" title="GitHub"><i class="fa fa-github-square"></i></a>
     <a href="https://www.linkedin.com/in/gábor-farkas-922262113/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin-square"></i></a>
     <a href="https://scholar.google.com/citations?authorid=i-iSuGgAAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a>
