--- a/stuff/3_project/index.html
+++ b/stuff/3_project/index.html
@@ -88,7 +88,7 @@
 
 <p>There is a pretty application created to support the upcoming paper about this study. Feel free to check it out <a href="https://gaborfarkas.github.io/rendering_pub/profile">here</a>, and try out the renderer. Furthermore, if you find this feature useful, and find a new bug in the engine, you can create an issue about it at the OpenLayers project’s <a href="https://github.com/openlayers/openlayers/issues">GitHub page</a>.</p>
 
-<p>Hungarian presentation about the renderer at the annual conference of the local OsGeo chapter:</p>
+<p>Hungarian presentation about the renderer at the annual conference of the local OSGeo chapter:</p>
 
 <iframe width="100%" height="500px" src="https://www.youtube.com/embed/HoYizFv1kZM">
 </iframe>
