--- a/stuff/4_project/index.html
+++ b/stuff/4_project/index.html
@@ -84,7 +84,15 @@
   </header>
 
   <article class="post-content Practical GIS clearfix">
-    
+    <p>Practical GIS is my second (and for now final) book for Packt Publishing in a much greater field. I used my writing experience from my previous book, my teaching experience so far, and what I learned in the past years to produce a practical guide for beginner GIS users preferably with some IT background. While I do not feel myself ready for an academic textbook, creating a technical guide with practical problems and solutions was clearly felt doable. I carefully chose software with which I had the best experience regarding learning curve besides productivity, the most essential theoretical concepts in order to understand the basics of GIS, and the most exciting tasks I met with in my career to create this book. I really hope it will reach its target audience and its readers will find it useful.</p>
+
+<p>The book can be ordered from <a href="https://www.amazon.com/Practical-GIS-Gabor-Farkas/dp/1787123324/ref=sr_1_1?ie=UTF8&amp;qid=1511181195&amp;sr=8-1&amp;keywords=practical+gis">Amazon</a> and <a href="https://www.packtpub.com/application-development/practical-gis">Packt</a>.</p>
+
+<p>The great thing about this work is Packt deemed it worthy to create a video course from it. They decided to break it in two separate video courses, from where the first one, <a href="https://www.packtpub.com/application-development/practical-gis-fundamentals-open-source-gis-video">Practical GIS - Fundamentals of Open Source GIS</a> is available. There are also two freely available parts showing raster handing and vector styling on YouTube:</p>
+
+<iframe width="100%" height="500px" src="https://www.youtube.com/embed/vCEfp0N_HDg" frameborder="0" allowfullscreen=""></iframe>
+
+<iframe width="100%" height="500px" src="https://www.youtube.com/embed/TR4obydpF_w" frameborder="0" allowfullscreen=""></iframe>
 
   </article>
 
