--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <a href="https://github.com/GaborFarkas" target="_blank" title="GitHub"><i class="fa fa-github-square"></i></a>
     <a href="https://www.linkedin.com/in/gábor-farkas-922262113/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin-square"></i></a>
     <a href="https://scholar.google.com/citations?authorid=i-iSuGgAAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a>
-    <a href="https://www.researchgate.net/profile/" target="_blank" title="ResearchGate"><i class="ai ai-researchgate-square"></i></a>
+    <a href="https://www.researchgate.net/profile/Gabor_Farkas4" target="_blank" title="ResearchGate"><i class="ai ai-researchgate-square"></i></a>
     <a href="https://pte.academia.edu/GaborFarkas" target="_blank" title="Academia"><i class="ai ai-academia-square"></i></a>
   </span>
 </div>
