Update projects and publication

--- a/publications/index.html
+++ b/publications/index.html
@@ -134,6 +134,8 @@
   
   
   
+    [<a href="http://www.scitepress.org/PublicationsDetail.aspx?ID=ypwhdIfn/do=&amp;t=1" target="_blank">HTML</a>]
+  
   
     [<a href="https://gaborfarkas.github.io/papers/alternative_raster_display_model.pdf" target="_blank">PDF</a>]
   
