Update bib, profile

--- a/rendering_pub/profile/index.html
+++ b/rendering_pub/profile/index.html
@@ -4,6 +4,7 @@
         <script type="text/javascript" src="js/ol-debug.js"></script>
         <script type="text/javascript" src="js/ol3-layerswitcher.js"></script>
         <link href="js/ol.css" rel="stylesheet">
+        <title>OpenLayers WebGL rendering benchmark tool</title>
         <link href="js/ol3-layerswitcher.css" rel="stylesheet">
 		<style>
             body {
