Update bib, profile

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </div>
 
 
-<p>I received my BSc and MSc degrees in geography in the University of Pécs, Institute of Geography. I’m currently a lecturer with the same institute. My tasks involve teaching, operating two computer labs, and researching. My main reseach interests are Web GIS and GIS development on an open source basis. In parallel, I’m also working towards my PhD degree in Earth Sciences.</p>
+<p>I received my BSc and MSc degrees in geography from University of Pécs, Institute of Geography. Currently working as a lecturer with the same institute, my tasks involve teaching, operating two computer labs, and researching. My main reseach interests are Web GIS and GIS development on an open source basis. In parallel, I’m also working towards my PhD degree in Earth Sciences. This site is intended as a research profile, and therefore, it is mainly about my research and other academic stuff.</p>
 
 
 
@@ -123,7 +123,7 @@
     <footer>
 
   <div class="wrapper">
-    &copy; Copyright 2017 Gábor Farkas.
+    &copy; Copyright 2019 Gábor Farkas.
     Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme. Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 
     
