--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -6,7 +6,7 @@
                     <h1>Your destiny awaits</h1>
                     <p>As leader of a high-tech SME, you are on the verge of joining the big leagues. You realize the competencies your company will need to scale and wonder, how should you build your team up. Let me help you in making this process as pleasant as it should always be.</p>
                 </div>
-                <div class="w-2/4 relative h-80 hero-scene"></div>
+                <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg" (heroChanged)="toggleHero()"></div>
             </div>
             <div>
 
