--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg" (heroChanged)="toggleHero()"></div>
             </div>
-            <div>
+            <div class="w-2/4 relative h-80">
 
             </div>
         </div>
