Add 2nd hero scene

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -6,10 +6,14 @@
                     <h1>Your destiny awaits</h1>
                     <p>As leader of a high-tech SME, you are on the verge of joining the big leagues. You realize the competencies your company will need to scale and wonder, how should you build your team up. Let me help you in making this process as pleasant as it should always be.</p>
                 </div>
-                <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg" (heroChanged)="toggleHero()"></div>
+                <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg" [heroScene]="HeroScene.LONGTERM" (heroChanged)="toggleHero()"></div>
             </div>
-            <div class="w-2/4 relative h-80">
-
+            <div class="flex flex-row">
+                <div class="w-2/4 p-6">
+                    <h1>Just a stretch</h1>
+                    <p>Sometimes, all of us need a little help, no matter if you are directing a multinational company, a small family business, or a particle collider.</p>
+                </div>
+                <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg" [heroScene]="HeroScene.COUNSEL" (heroChanged)="toggleHero()"></div>
             </div>
         </div>
     }
