Add 3rd hero scene

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -15,6 +15,13 @@
                 </div>
                 <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg" [heroScene]="HeroScene.COUNSEL" (heroChanged)="toggleHero()"></div>
             </div>
+            <div class="flex flex-row">
+                <div class="w-2/4 p-6">
+                    <h1>STEMming from academia</h1>
+                    <p>Most of the complex IT problems have unique optimal solutions with slightly different design patterns. However, there is a single common rule for every problem: the best method is the scientific method.</p>
+                </div>
+                <div class="w-2/4 relative h-80 hero-scene" [heroScene]="HeroScene.RESEARCH"></div>
+            </div>
         </div>
     }
 </div>
